Complete list of commits can be found at:
https://github.com/devinsays/visual/commits/master

Visual 1.1

- Fix developer notice when excerpt option not set
- Fix mobile menu when wpadminbar is visible

Visual 1.0

- Better Jetpack infinite scroll reloading
- Fix theme warning when $meta_text was undefined
- Remove unused images
- Simplify comments-link markup

Visual 0.9

- Remove light.css from codebase
- Add featured images to the RSS feeds
- Added RTL stylesheet

Visual 0.8

- Sticky footer
- Fix for styles notice

Visual 0.7

- Update entry-summary styles on search page
- Update widget title styles
- Update 404 page widget styling
- Option to display full content or excerpts on archives

Visual 0.6

- Display full content by default on archives
- Added full-width page template
- Replace Options Framework with theme customizer
- Remove color palette option unless alternate is in use

Visual 0.5

- Updates for widget padding
- Fix for masonry margins
- Better menus for small screen sizes

Visual 0.4

- Included Options Framework library directly in theme
- Support for Jetpack Infinite Scroll

Visual 0.3

- Added options panel
- Added multiple style options (dark, light, minimal)
- Added option for footer text
- Removed image lazy loading
- Update SASS files to use bourbon
- Bugfix for responsive menus
- Added .pot file for translations

Visual 0.2.2

- Style update for pre tags
- Updates readme.txt to link to licenses

Visual 0.2.1

- New screenshot
- Updated theme URI
- Better support for fallback menus

Visual 0.2

- Added Icon font Entypo
- Lazy load of images in masonry layout
- Updates to archive, search and 404 templates
- Design polish

Visual 0.1

- Initial submission to WordPress.org