@@ -182,10 +182,10 @@ html, body {
 .main-navigation li:hover > a {
 	background:#e9e9e9;
 }
-.main-navigation li.has-children a {
+.main-navigation .menu-item-has-children a {
 	padding-right:40px;
 }
-.main-navigation li.has-children > a:after {
+.main-navigation .menu-item-has-children > a:after {
 	content:'\e760';
 	font-family: 'entypo-custom';
 	font-size:16px;
@@ -194,6 +194,12 @@ html, body {
 	position: absolute;
 	right:20px;
 	speak: none;
+}
+.main-navigation .menu-item-has-children .menu-item-has-children a {
+	padding: 18px 20px;
+}
+.main-navigation .menu-item-has-children .menu-item-has-children > a:after {
+	content:none;
 }
 .main-navigation ul ul {
 	display: none;
